11 update and free

--- a/ct_footer_debranding/views/ct_footer_debranding.xml
+++ b/ct_footer_debranding/views/ct_footer_debranding.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
   <!-- inheriting Products item" view -->
-  <template id="ct_footer_debranding" inherit_id="website.brand_promotion" name="Footer debranding" active="True" priority="99">
-    <xpath expr="//div[@class='o_brand_promotion']" position="replace">
-      <div class="o_brand_promotion">
-    </div>
-        </xpath>
-    </template>
-    </data>
+  <template id="ct_footer_debranding" inherit_id="website.layout_footer_copyright" name="Footer debranding" active="True" priority="99">
+    <xpath expr="//div[@class='pull-right']" position="replace">
+      <div class="pull-right" t-ignore="true" t-if="not editable">
+        <p></p>
+      </div>
+    </xpath>
+  </template>
+</data>
