--- a/24h_filter/views/acc_f_24.xml
+++ b/24h_filter/views/acc_f_24.xml
@@ -1,16 +1,16 @@
-<openerp>
-    <data>
-      <!-- Record from External ID -->
-      <record id="d_search_acc" model="ir.ui.view">
-        <field name="inherit_id" ref="account.view_account_invoice_filter"/>
-        <!-- From object  -->
-        <field name="model">account.invoice</field>
-        <!-- inherits architecture  -->
-        <field name="arch" type="xml">
-          <field name='number' position="before">
-           <filter name="Last 24h" domain="[('date_invoice', '&gt;=', (datetime.datetime.now() - datetime.timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')), ('date_invoice', '&lt;=', datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S'))]"/>
-            </field>
+<odoo>
+  <data>
+    <!-- Record from External ID -->
+    <record id="d_search_acc" model="ir.ui.view">
+      <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+      <!-- From object -->
+      <field name="model">account.invoice</field>
+      <!-- inherits architecture -->
+      <field name="arch" type="xml">
+        <field name='number' position="before">
+          <filter name="Last 24h" domain="[('date_invoice', '&gt;=', (datetime.datetime.now() - datetime.timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')), ('date_invoice', '&lt;=', datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S'))]"/>
         </field>
-      </record>
-    </data>
-</openerp>
+      </field>
+    </record>
+  </data>
+</odoo>
