--- a/opportunities_on_so_list/views/so_tree_views.xml
+++ b/opportunities_on_so_list/views/so_tree_views.xml
@@ -1,4 +1,4 @@
-<openerp>
+<odoo>
     <data>
       <record id="opportunityid_view_order_tree" model="ir.ui.view">
         <field name="inherit_id" ref="sale.view_order_tree"/>
@@ -10,4 +10,4 @@
         </field>
       </record>
     </data>
-</openerp>
+</odoo>
